# skrest

./: .ocamlformat  README.md  dune  dune-project  ezrest.opam  skrest.opam  skrest_js.opam  skrest_unix.opam
.github/workflows/: main.yml
examples/: dune  skrest_js_example.html  skrest_js_example.ml
js/: .skrest_js.ml.swp  dune  skrest_js.ml
src/: dune  ezrest.ml  ezrest.mli  skrest.ml  skrest.mli
tests/: dune  skrest_common_tests.ml  skrest_js_test.js  skrest_js_test.ml  skrest_unix_test.ml
unix/: dune  skrest_unix.ml
